applications/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: whoami
